# voice-overlay-public

./: .gitignore  README.md  pyproject.toml  requirements.txt
.brain/: PROJECT.md
.brain/ARTIFACTS/context/: voice-overlay.md
.brain/ARTIFACTS/plans/: config-gui-plan.md  cross-platform-port-plan.md  voice-overlay-plan.md  windows-autostart-robustness-plan.md
.brain/ARTIFACTS/tasks/: tasks.md
.brain/CHANGES/: 2026-06-09-execution.md  2026-06-12-cross-platform.md  2026-06-13-autostart-robustness.md  2026-06-13-config-gui-complete.md
.brain/CONTEXT/: context-cross-platform-port.md
scripts/: check_deps.ps1  check_deps.sh  setup-linux.sh  setup-windows.ps1
src/voice_overlay/: __init__.py  audio_capture.py  config.py  hotkey.py  lockfile.py  main.py  text_injector.py  transcription.py  uinput_injector.py
src/voice_overlay/_platform/: __init__.py  autostart.py  config.py
src/voice_overlay/_platform/hotkey/: __init__.py  linux.py  windows.py
src/voice_overlay/_platform/injection/: __init__.py  linux.py  windows.py
src/voice_overlay/_platform/lockfile/: __init__.py  linux.py  windows.py
src/voice_overlay/gui/: __init__.py  config_window.py  settings_widgets.py  system_tray.py  theme.py
tests/: test_audio_capture.py  test_autostart.py  test_config.py  test_gui.py  test_hotkey.py  test_smoke.py  test_text_injector.py  test_transcription.py
